test/expressions/bitshift/checks/bitshiftByNegativeParam.2.good
bitshiftByNegativeParam.chpl:10: error: Cannot bitshift 128 by -8 because -8 is less than 0
